NIFI-15880: Apply review feedback to ConnectorTroubleshootingIT
Assert exact queued FlowFile count survives restart, use getFirst(),
exercise GET/POST while not in Troubleshooting and GET/PUT/POST/DELETE
while in Troubleshooting, filter Stateless Process Groups instead of
swallowing scheduling exceptions, fold Processor coverage into the
managed-flow component access test, extract a managedGroupId local,
trim verbose Javadocs, drop "the fix" / historical references, add
blank lines between back-to-back blocks, and replace the ConflictingCall
and FlowClientCall inner functional interfaces with java.util.concurrent.Callable.